--- a/scraper/.env
+++ b/scraper/.env
@@ -1,2 +1,2 @@
-BUCKET_NAME=arn:aws:s3express:us-east-2:273641284005:bucket/catstream--use2-az1--x-s3
+BUCKET_NAME=livestreamx-cats
 CHANNEL=niiyan1216
